--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,19 +4,27 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json && cd ../.. && npm i"
+    "build": "tsc -p tsconfig.json && cd ../.. && npm i",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource src/datasource.ts",
+    "migration:generate": "npm run typeorm -- migration:generate src/migrations/new-migration",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "exports":{
-    ".":"./dist/index.js"
+  "exports": {
+    ".": "./dist/index.js"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
     "@nestjs/typeorm": "^11.0.0",
+    "dotenv": "^17.2.2",
     "pg": "^8.16.3",
     "typeorm": "^0.3.26"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
