--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,12 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "migration:generate":{
+      "cache": false
+    },
+    "migration:run":{
+      "cache": false  
     }
   }
 }
